--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </video>
 
             <!-- Text at center of ground -->
-            <p>I Love You</p>
+            <p>I Love You <br>You can trust me 🥸</br></p>
           </div>
           <div id="ground"></div>
         </div>
