--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title> I LOVE YOU 🙂🙂</title>
+  <title> Riya  🙂🙂</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div id="drag-container">
     <div id="spin-container">
-      <!-- Add your images (or video) here -->
+      
       <img src ="./img/cute.jpg"  alt="">
       <img src="./img/kgaru.jpg" alt="">
       <img src="./img/Gf.jpg" alt="">
@@ -31,7 +31,7 @@
             </video>
 
             <!-- Text at center of ground -->
-            <p>I Love You <br>You can trust me 🥸</br></p>
+            
           </div>
           <div id="ground"></div>
         </div>
